--- a/Newtral-Scraper.ipynb
+++ b/Newtral-Scraper.ipynb
@@ -109,7 +109,7 @@
     "    \n",
     "    article = {\"Title\": title, \"Tags\": tag_list, \"Publication_date\": date, \"Content\": content, \"URL\": url, \"Fuente\": \"Newtral.es\"}\n",
     "    \n",
-    "    return article\n"
+    "    return article"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "lista_articulos = []   \n",
     "for e in lista_enlaces:\n",
     "    articulo = scraping_article(e)\n",
-    "    lista_articulos.append(articulo)\n"
+    "    lista_articulos.append(articulo)"
    ]
   },
   {
