--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,34 +11,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1056"
+       "1224"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "infile = open(\"Maldita_Dataset_27-06-2020\",'rb')\n",
+    "infile = open(\"Maldita_Dataset_02-07-2020\",'rb')\n",
     "dataset = pickle.load(infile)\n",
     "len(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Para instalar el NLTK se me abre una interfaz de usuario en otra ventana.\n",
-    "\n",
     "#IMPORTS FROM BLOG\n",
     "import re, string, unicodedata\n",
     "import nltk\n",
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -469,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +477,29 @@
      "text": [
       "**** TERM FREQUENCIES **** \n",
       "['vide', 'circul', 'puert', 'bul', 'grab', 'si', 'alarm', 'coronavirus', 'cont', 'red']\n",
-      "['corre', 'recaud', 'investigacion', 'compr', 'destin', 'mascarill', 'covid19', 'client', 'pued', 'public']\n"
+      "['corre', 'recaud', 'investigacion', 'compr', 'destin', 'mascarill', 'covid19', 'client', 'pued', 'public']\n",
+      "Article:\n",
+      "['vide', 0.03162055335968379]\n",
+      "['circul', 0.019762845849802372]\n",
+      "['grab', 0.019762845849802372]\n",
+      "['puert', 0.019762845849802372]\n",
+      "['si', 0.019762845849802372]\n",
+      "['bul', 0.019762845849802372]\n",
+      "['mas', 0.015810276679841896]\n",
+      "['ciud', 0.015810276679841896]\n",
+      "['coronavirus', 0.015810276679841896]\n",
+      "['cont', 0.015810276679841896]\n",
+      "Article:\n",
+      "['corre', 0.057803468208092484]\n",
+      "['recaud', 0.028901734104046242]\n",
+      "['investigacion', 0.023121387283236993]\n",
+      "['compr', 0.023121387283236993]\n",
+      "['client', 0.017341040462427744]\n",
+      "['public', 0.017341040462427744]\n",
+      "['mascarill', 0.017341040462427744]\n",
+      "['destin', 0.017341040462427744]\n",
+      "['covid19', 0.017341040462427744]\n",
+      "['pued', 0.017341040462427744]\n"
      ]
     }
    ],
@@ -495,22 +516,42 @@
     "        print(\"We only have one document. Use more than one document\")\n",
     "        exit()\n",
     "    tfs = []\n",
+    "    tf_list=[]\n",
     "    \n",
     "    for article in articles:     \n",
     "        c_list = Counter(article)\n",
     "        tfs.append(c_list)\n",
-    "    return tfs\n",
+    "        tf_article =[]\n",
+    "        \n",
+    "        #Need to return the numebr of times a word appears / total words\n",
+    "        for word in set(article):\n",
+    "            #print(word, article.count(word))\n",
+    "            tf_value = article.count(word) / len(article)\n",
+    "            #print(tf_value)\n",
+    "            tf_word= [word , tf_value] \n",
+    "            tf_article.append(tf_word)\n",
+    "        tf_article.sort(key = lambda x: x[1],reverse = True)\n",
+    "        tf_list.append(tf_article)   \n",
+    "    \n",
+    "    return tfs,tf_list\n",
     "\n",
-    "tfs = calculate_tfs(processed_articles)\n",
+    "tfs,tf_list = calculate_tfs(processed_articles)\n",
     "#print(tfs)\n",
+    "#print(tf_list)\n",
+    "\n",
     "print(\"**** TERM FREQUENCIES **** \")\n",
     "for tf in tfs:\n",
-    "     print(sorted(tf, key=tf.get, reverse=True)[:10])"
+    "    print(sorted(tf, key=tf.get, reverse=True)[:10])\n",
+    "\n",
+    "for val in tf_list:\n",
+    "    print('Article:')\n",
+    "    for i in val[:10]:\n",
+    "        print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -519,8 +560,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function calculate_idf.<locals>.<lambda> at 0x000001EC371815E8>, {})\n",
-      "defaultdict(<function calculate_idf.<locals>.<lambda> at 0x000001EC371815E8>, {})\n"
+      "defaultdict(<function calculate_idf.<locals>.<lambda> at 0x0000019AC88968B8>, {})\n",
+      "defaultdict(<function calculate_idf.<locals>.<lambda> at 0x0000019AC88968B8>, {})\n"
      ]
     },
     {
@@ -530,8 +571,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-41-5fe4fef595f5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[0midf_terms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_idf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtfs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midf_terms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moperator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitemgetter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mreverse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-41-5fe4fef595f5>\u001b[0m in \u001b[0;36mcalculate_idf\u001b[1;34m(tfs)\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;31m#print(n_docs_total)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0midf_terms\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-12-ad2585fd77df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0midf_terms\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0midf_terms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_idf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtfs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midf_terms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moperator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitemgetter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mreverse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-12-ad2585fd77df>\u001b[0m in \u001b[0;36mcalculate_idf\u001b[1;34m(tfs)\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;31m#print(n_docs_total)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0midf_terms\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[0midf_terms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_idf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtfs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'idf_terms' is not defined"
      ]
     }
