Actualización. Version 1.0 del flujo de procesamiento
Finalmente se emplea el lematizador de Spacy y se realizan 8 fases de preprocesamiento para continuar realizando la vectorización y clusterización de los articulos.

--- a/Lematización.ipynb
+++ b/Lematización.ipynb
@@ -31,160 +31,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[' ',\n",
-       " 'comer',\n",
-       " 'gestionar',\n",
-       " 'lo',\n",
-       " 'informacion',\n",
-       " 'comer',\n",
-       " 'querer',\n",
-       " ',',\n",
-       " 'que',\n",
-       " 'llevar',\n",
-       " 'uno',\n",
-       " 'bandera',\n",
-       " 'de',\n",
-       " 'España',\n",
-       " ',',\n",
-       " 'abrazar',\n",
+       "['Para',\n",
+       " 'aprender',\n",
        " 'a',\n",
-       " 'uno',\n",
-       " 'agente',\n",
-       " 'de',\n",
-       " 'policía',\n",
-       " '.',\n",
-       " 'Se',\n",
-       " 'compartir',\n",
-       " 'con',\n",
-       " 'mensaje',\n",
-       " 'comer',\n",
-       " '\"',\n",
-       " 'Aquí',\n",
-       " 'uno',\n",
-       " 'claro',\n",
-       " 'imagen',\n",
-       " 'de',\n",
-       " 'lo',\n",
-       " 'policía',\n",
-       " 'repartir',\n",
-       " 'porrazo',\n",
-       " 'en',\n",
-       " 'el',\n",
-       " 'barrio',\n",
-       " 'de',\n",
-       " 'Salamanca',\n",
-       " '\"',\n",
-       " '.',\n",
-       " 'No',\n",
-       " 'obstante',\n",
-       " ',',\n",
-       " 'ser',\n",
-       " 'uno',\n",
-       " 'bulo',\n",
-       " 'que',\n",
-       " 'este',\n",
-       " 'imagen',\n",
+       " 'hacer',\n",
+       " 'ese',\n",
        " 'haber',\n",
-       " 'ser',\n",
-       " 'tomar',\n",
-       " 'en',\n",
-       " 'este',\n",
-       " 'barrio',\n",
-       " 'madrileño',\n",
-       " 'o',\n",
        " 'que',\n",
-       " 'ser',\n",
-       " 'actual',\n",
-       " '.',\n",
-       " 'Fue',\n",
-       " 'tomar',\n",
-       " 'durante',\n",
-       " 'lo',\n",
-       " 'manifestación',\n",
-       " 'a',\n",
-       " 'favor',\n",
-       " 'de',\n",
-       " 'lo',\n",
-       " 'unidad',\n",
-       " 'de',\n",
-       " 'España',\n",
-       " 'del',\n",
-       " '8',\n",
-       " 'de',\n",
-       " 'octubre',\n",
-       " 'de',\n",
-       " '2017',\n",
-       " 'en',\n",
-       " 'Barcelona',\n",
-       " '.',\n",
-       " 'La',\n",
-       " 'Sexta',\n",
-       " 'emitió',\n",
-       " 'este',\n",
-       " 'imagen',\n",
+       " 'tener',\n",
+       " 'empeñar',\n",
+       " 'no',\n",
+       " 'se',\n",
+       " 'comer',\n",
        " 'el',\n",
-       " '8',\n",
-       " 'de',\n",
-       " 'octubre',\n",
-       " 'de',\n",
-       " '2017',\n",
-       " ',',\n",
-       " 'cuando',\n",
-       " 'en',\n",
-       " 'lo',\n",
-       " 'manifestación',\n",
-       " 'a',\n",
-       " 'favor',\n",
-       " 'de',\n",
-       " 'lo',\n",
-       " 'unidad',\n",
-       " 'de',\n",
-       " 'España',\n",
-       " 'de',\n",
-       " 'Barcelona',\n",
-       " 'alguno',\n",
-       " 'personar',\n",
-       " 'mostrar',\n",
-       " 'su',\n",
-       " 'afectar',\n",
-       " 'a',\n",
-       " 'agente',\n",
-       " 'de',\n",
-       " 'lo',\n",
-       " 'policía',\n",
-       " '.',\n",
-       " 'Entre',\n",
-       " 'ellos',\n",
-       " ',',\n",
-       " 'lo',\n",
-       " 'imagen',\n",
-       " 'del',\n",
-       " 'abrazar',\n",
-       " 'que',\n",
-       " 'ahora',\n",
-       " 'circular',\n",
-       " 'descontextualizar',\n",
-       " '(',\n",
-       " 'minuto',\n",
-       " '.',\n",
-       " '00:06',\n",
-       " 'aproximadamente',\n",
-       " ')']"
+       " 'ver']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = \"\"\" como gestionamos la informacion como queremos, que lleva una bandera de España, abraza a una agente de policía. Se comparte con mensajes como \"Aquí una clara imagen de la policía repartiendo porrazos en el barrio de Salamanca\". No obstante, es un bulo que esta imagen haya sido tomada en este barrio madrileño o que sea actual. Fue tomada durante la manifestación a favor de la unidad de España del 8 de octubre de 2017 en Barcelona. La Sexta emitió esta imagen el 8 de octubre de 2017, cuando en la manifestación a favor de la unidad de España de Barcelona algunas personas mostraron su afecto a agentes de la policía. Entre ellas, la imagen del abrazo que ahora circula descontextualizada (min. 00:06 aprox.)\"\"\"\n",
+    "text =\"\"\"Para aprender a hacer eso hay que tener empeño no se como lo ves\"\"\"\n",
     "lemmas = []\n",
     "doc = nlp(text)\n",
     "for token in doc:\n",
@@ -1443,7 +1318,9 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1461,6 +1338,43 @@
     "    # Use the translation table to remove all the accents\n",
     "articles = [article.translate(table) for article in texto]\n",
     "print(articles)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "παναγιάς\n",
+      "πονεμένης\n",
+      "της\n",
+      "город\n",
+      "домам\n",
+      "другими\n",
+      "жителями\n",
+      "люди\n",
+      "наполняется\n",
+      "по\n",
+      "пока\n",
+      "сидят\n",
+      "⁰s28\n",
+      "ー\n",
+      "小果宝\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "word = ['παναγιάς()()', 'πονεμένης', 'της', 'город', 'домам', 'другими', 'жителями', 'люди', 'наполняется', 'по', 'пока', 'сидят', '⁰s28', 'ー', '小果宝']\n",
+    "for w in word:\n",
+    "    new_word = re.sub(r'[^\\w\\sÀ-ú]', '', w)\n",
+    "    if new_word != '':\n",
+    "        print(new_word)"
    ]
   }
  ],
