--- a/ScraperMaldita_Paginas.ipynb
+++ b/ScraperMaldita_Paginas.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,14 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
       "<class 'list'>\n"
      ]
     },
@@ -432,18 +431,18 @@
        "  'Fuente': 'Maldita.es'}]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "infile = open(filename,'rb')\n",
+    "infile = open('Maldita_FN_Pag-1_02-07-2020','rb')\n",
     "new_dict = pickle.load(infile)\n",
     "infile.close()\n",
     "\n",
     "\n",
-    "print(new_dict==lista_articulos)\n",
+    "#print(new_dict==lista_articulos)\n",
     "print(type(new_dict))\n",
     "new_dict"
    ]
